--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,16 @@
 NODE_ENV=development
 PORT=5000
-VITE_API_URL=http://localhost:5000/api
-VITE_SOCKET_URL=http://localhost:5000
-
-# Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-
-# JWT Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/property_agent_app
 JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
+CLIENT_URL=http://localhost:5173
 
-# Email Configuration
+# Email configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 FROM_EMAIL=noreply@propertyagentapp.com
 
-# File Upload Settings
+# File upload settings
 MAX_FILE_SIZE=52428800
 UPLOAD_DIR=./uploads
-
-# Client URL
-CLIENT_URL=http://localhost:5173
