--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Multi-role real estate platform with Excel upload system",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
@@ -12,35 +13,33 @@
     "migrate": "node migrations/migrate.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
-    "axios": "^1.6.2",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "joi": "^17.9.2",
+    "multer": "^1.4.5",
+    "xlsx": "^0.18.5",
+    "socket.io": "^4.7.2",
+    "pg": "^8.11.3",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.344.0",
-    "multer": "^1.4.4",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
-    "pg": "^8.11.3",
+    "joi": "^17.9.2",
+    "winston": "^3.10.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.1",
-    "socket.io": "^4.7.2",
+    "react-router-dom": "^6.8.1",
     "socket.io-client": "^4.7.2",
-    "winston": "^3.10.0",
-    "xlsx": "^0.18.5"
+    "axios": "^1.4.0",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "concurrently": "^8.2.2",
+    "concurrently": "^8.2.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -51,6 +50,5 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  },
-  "type": "module"
+  }
 }
